# rrc-web

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  run.sh  test_security.sh
.github/workflows/: ci.yml
rrc_web/: __init__.py  auth.py  backend.py  client.py  codec.py  config.py  constants.py  envelope.py  generate_cert.py  main.py  setup_security.py  utils.py
rrc_web/static-svelte/: app.js  index.html
rrc_web/static-svelte/assets/: index.css
svelte-frontend/: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
svelte-frontend/src/: App.svelte  app.css  commands.js  main.js  stores.js  stores.svelte.js  websocket.js
svelte-frontend/src/components/: ConnectionDialog.svelte  JoinRoomDialog.svelte  LoginDialog.svelte  MessageArea.svelte  MessageInput.svelte  MobileMenu.svelte  Navbar.svelte  RoomSidebar.svelte  UserList.svelte
