[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rrc-web"
version = "0.1.0"
description = "Web-based client for RRC (Reticulum Relay Chat)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RRC Web Client Contributors"}
]
keywords = ["reticulum", "rrc", "chat", "browser", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "cbor2>=5.6.0",
    "rns>=1.0.4",
    "aiohttp>=3.9.0",
    "websockets>=15.0.1",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=25.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rrc-web = "rrc_web.main:main"
generate-cert = "rrc_web.generate_cert:main"
rrc-security-setup = "rrc_web.setup_security:main"

[project.urls]
Homepage = "https://github.com/kc1awv/rrc-web"
Documentation = "https://github.com/kc1awv/rrc-web#readme"
Repository = "https://github.com/kc1awv/rrc-web"
Issues = "https://github.com/kc1awv/rrc-web/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rrc_web*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
